--- a/assets/style.css
+++ b/assets/style.css
@@ -5,50 +5,65 @@
 }
 
 body {
-  background-color: #1E3146;
+  /*background-color: #1E3146;
   background: url('reverb_background.png') center center fixed;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat;*/
   width: 100%;
   height: 100%;
   margin: 0;
   font-family: "Raleway";
+  font-size: 14px;
 }
 
-.no-list-type {
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.7rem;
+}
+
+.cover {
+  background: url('reverb-11.jpg') center center; 
+  width: 100%;
+  height: 1000px;
+}
+
+
+/*.no-list-type {
   list-style: none;
   margin: 1em;
   padding: 0;
   line-height: 1.3em;
-}
+}*/
 
-.auto {
+/*.auto {
   margin: auto;
-}
+}*/
 
 /*.pics {
   width: 150px;
 }*/
 
-.container {
+/*.container {
   max-width: 750px;
   margin: auto;
-}
+}*/
 
-iframe {
-  /*width="640" height="360"*/
+/*iframe {
   width: 640px;
   height: 360px;
-}
+}*/
 
-@media (max-width: 670px) {
+/*@media (max-width: 670px) {
   iframe {
     width: 90%;
     height: 56.25vw;
   }
-}
+}*/
 
-.vineyard_logo {
+/*.vineyard_logo {
   width: 20%;
   margin: auto;
-}
+}*/
