--- a/assets/style.css
+++ b/assets/style.css
@@ -25,16 +25,10 @@ h2 {
 }
 
 .cover {
-  /*background: url('reverb-11.jpg') center center;
-  background-repeat: no-repeat;*/
   background: url('reverb_background.png') center center fixed;
   background-size: cover;
   width: 100%;
-  /*height: 1000px;*/
   height: 100vh;
-  /*margin-top: 50px;*/
-  /*position: relative;*/
-  /*z-index: 1;*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -215,6 +209,46 @@ p {
   text-decoration: underline;
 }
 
+
+.schedule-container {
+  width: 100%;
+  background-color: #2B4662;
+  padding-bottom: 50px;
+  /*display: flex;*/
+}
+
+.schedule {
+  max-width: 1200px;
+  text-align: center;
+  margin: auto;
+  /*display: flex;*/
+}
+
+.schedule h1 {
+  text-align: center;
+  padding-top: 50px;
+  color: white;
+}
+
+.schedule h2 {
+  color: white;
+  text-decoration: underline;
+}
+
+.schedule li {
+  color: white;
+  font-size: 1rem;
+  line-height: 1.4rem;
+}
+
+.schedule .grid {
+  margin-top: 50px;
+}
+
+.schedule span.time {
+  font-weight: bold;
+  color: #fefefe;
+}
 
 
 
