--- a/assets/style.css
+++ b/assets/style.css
@@ -20,6 +20,7 @@ h2 {
   font-size: 1.7rem;
 }
 
+
 .cover {
   background: url('reverb_background.png') center center fixed;
   background-size: cover;
@@ -46,6 +47,10 @@ h2 {
   background-color: grey;
   text-decoration: none;
   font-weight: bold;
+}
+
+.cover img {
+  max-width: 1000px;
 }
 
 
@@ -281,11 +286,13 @@ p {
 }
 
 .register a {
+  margin-top: 64px;
+  text-align: center;
   font-size: 1.5rem;
-  padding: 15px;
+  /*padding: 15px;*/
   color: white;
-  background-color: grey;
-  text-decoration: none;
+  /*background-color: grey;*/
+  text-decoration: underline;
   font-weight: bold;
 }
 
@@ -328,6 +335,10 @@ p {
   .cover a {
     font-size: 1.2rem;
     padding: 10px;
+  }
+
+  .cover img {
+    width: 100%;
   }
 
 }
