--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,10 @@ body {
   border: 1px solid white;
 }
 
+#navbarNav {
+  text-align: right;
+}
+
 /* .navbar-right {
   display: flex;
   justify-content: flex-end;
@@ -107,4 +111,62 @@ body {
 .header-content a {
   text-decoration: none;
   color: white;
+}
+
+
+
+
+
+
+
+
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    /* background-color: rgba(23,233,217); */
+    background-color: rgba(23,233,217, 1);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    /* top: 20px; */
+    right: 15px;
+    font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
 }
