--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+/*
+* --Colors--
+* - blue: rgba(23,233,217,1)
+*
+*
+*
+*
+*
+v
+*/
+
+
 *{
   box-sizing: border-box;
 }
@@ -10,6 +22,8 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   /* overflow: hidden; */
+  width: 100%;
+  height: 100vh;
 
 }
 
@@ -136,7 +150,7 @@ body {
 
 .overlay-content {
     position: relative;
-    top: 25%;
+    top: 10%;
     width: 100%;
     text-align: center;
     margin-top: 30px;
@@ -146,13 +160,17 @@ body {
     padding: 8px;
     text-decoration: none;
     font-size: 36px;
-    color: #818181;
+    /* color: #818181; */
+    /* color: #FF7676; -- redish*/
+    /* color: #F54EA2; */
+    color: #ED2FD4;
     display: block;
     transition: 0.3s;
 }
 
 .overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
+    /* color: #f1f1f1; */
+    color: #FF7676;
 }
 
 .overlay .closebtn {
