--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,11 @@ body {
   /* overflow: hidden; */
   width: 100%;
   height: 100vh;
+}
 
+a:hover {
+  color: #FF7676;
+  text-decoration: none;
 }
 
 .nav-background {
@@ -141,6 +145,7 @@ body {
     position: fixed;
     z-index: 1;
     top: 0;
+    /* top: 100px; */
     left: 0;
     /* background-color: rgba(23,233,217); */
     background-color: rgba(23,233,217, 1);
@@ -187,4 +192,32 @@ body {
     top: 15px;
     right: 35px;
   }
+}
+
+.register-nav {
+  color: white;
+  margin-right: 15px;
+}
+
+.menu-container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+  background-color: white;
+}
+
+.bar1, .bar3 {
+  width: 30px;
+  height: 3px;
+  /* background-color: #333; */
+  margin: 6px 0;
+}
+
+.bar2 {
+  width: 20px;
+  height: 3px;
+  /* background-color: #333; */
+  margin: 6px 0;
 }
