--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,9 +60,9 @@ a:hover {
   border: 1px solid white;
 }
 
-#navbarNav {
+/* #navbarNav {
   text-align: right;
-}
+} */
 
 /* .navbar-right {
   display: flex;
@@ -132,7 +132,33 @@ a:hover {
 }
 
 
+.homepage-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+.promo-video {
+  width: 800px;
+  height: 450px;
+}
+
+@media screen and (max-width: 800px) {
+  .promo-video {
+    width: 100%;
+    /* height: auto; */
+  }
+  .homepage-container {
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .r-button {
+    display: none;
+  }
+}
 
 
 
@@ -146,7 +172,8 @@ a:hover {
     z-index: 1;
     top: 0;
     /* top: 100px; */
-    left: 0;
+    /* left: 0; */
+    right: 0;
     /* background-color: rgba(23,233,217); */
     background-color: rgba(23,233,217, 1);
     overflow-x: hidden;
@@ -171,11 +198,16 @@ a:hover {
     color: #ED2FD4;
     display: block;
     transition: 0.3s;
+    text-transform: uppercase;
 }
 
 .overlay a:hover, .overlay a:focus {
     /* color: #f1f1f1; */
     color: #FF7676;
+    /* font-size: 40px; */
+    /* transform: rotate(360deg); */
+    /* transform: translateX(20px); */
+
 }
 
 .overlay .closebtn {
@@ -192,6 +224,19 @@ a:hover {
     top: 15px;
     right: 35px;
   }
+}
+
+.btn-register {
+  background-color: #FF7676;
+  padding: 12px;
+}
+
+.r-button {
+  padding-top: 20px;
+}
+
+.r-button a {
+  color: white;
 }
 
 .register-nav {
