--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,11 @@
 v
 */
 
+@font-face {
+  font-family: "Bebas";
+  src: url("BEBAS.ttf") format('truetype');
+}
+
 
 *{
   box-sizing: border-box;
@@ -18,12 +23,9 @@ body {
   font-family: 'Nanum Gothic', sans-serif;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
   font-size: 1rem;
   line-height: 1.5;
-  /* overflow: hidden; */
   width: 100%;
-  height: 100vh;
 }
 
 a:hover {
@@ -31,7 +33,17 @@ a:hover {
   text-decoration: none;
 }
 
-.nav-background {
+.vh-75 {
+  height: 75vh;
+  width: 100%;
+}
+
+.bg-gradient {
+  background: linear-gradient(to bottom right, #5b247a, #1bcedf);
+}
+
+/* DELETE */
+/* .nav-background {
   background-color: black;
   transition: .5s;
 }
@@ -45,9 +57,9 @@ a:hover {
     background-color: #000;
     padding-left: 20px;
   }
-}
+} */
 
-.no-list-type {
+/* .no-list-type {
   list-style: none;
 }
 
@@ -55,28 +67,48 @@ a:hover {
   color: white;
   margin-top: 100px;
 }
+*/
 
 .debug {
   border: 1px solid white;
 }
 
-/* #navbarNav {
-  text-align: right;
-} */
+.register-threeD {
+  margin-top: 1rem;
+  font-size: 30px;
+  letter-spacing: .2em;
+  text-transform: uppercase;
+  color: #FF7676;
+  transition: .4s;
+  text-align: center;
+  text-shadow:
+    1px .5px 0 #7F3B3B,
+    1px 1px 0 #7F3B3B,
+    1px 1.5px 0 #7F3B3B,
+    1px 2px 0 #7F3B3B,
+    1px 2.5px 0 #7F3B3B,
+    1px 3px 0 #7F3B3B,
+    1px 3.5px 0 #7F3B3B,
+    1px 4px 0 #7F3B3B,
+    6px 7px 15px black;
+}
 
-/* .navbar-right {
-  display: flex;
-  justify-content: flex-end;
-} */
+.register-threeD:hover {
+  transform: scale(1.1);
+  text-shadow:
+    1px -.5px 0 #13627F,
+    1px -1px 0 #13627F,
+    1px -1.5px 0 #13627F,
+    1px -2px 0 #13627F,
+    1px -2.5px 0 #13627F,
+    1px -3px 0 #13627F,
+    1px -3.5px 0 #13627F,
+    1px -4px 0 #13627F,
+    6px -7px 15px black;
+}
 
-/* @media screen and (min-width: 720px) {
-  .navbar-right {
-    display: block;
-  }
-} */
 
-
-.container-lg {
+/* .container-lg {
   max-width: 960px;
   margin: 0 auto;
 }
@@ -97,7 +129,7 @@ a:hover {
   display: flex;
   color: #fff;
   /* overflow: hidden; */
-}
+/* }
 
 .v-container {
   max-width: 960px;
@@ -118,9 +150,9 @@ a:hover {
 .fullscreen-video-wrap video {
   min-width: 100%;
   min-height: 100%;
-}
+} */
 
-.header-content {
+/* .header-content {
   z-index: 2;
   width: 100%;
   align-self: center;
@@ -139,31 +171,44 @@ a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+} */
+
+/* .coming-soon {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
+.coming-soon {
+  color: white;
+} */
 
 .promo-video {
-  width: 800px;
-  height: 450px;
+  width: 560px;
+  height: 315px;
 }
 
-@media screen and (max-width: 800px) {
+/* @media screen and (max-width: 800px) {
   .promo-video {
     width: 100%;
     /* height: auto; */
-  }
-  .homepage-container {
+  /* } */
+  /* .homepage-container {
     align-items: center;
     justify-content: flex-start;
   }
   .r-button {
     display: none;
-  }
-}
+  } */
+/* } */
 
 
 
 
-
+/*
 
 .overlay {
     height: 100%;
@@ -173,12 +218,12 @@ a:hover {
     top: 0;
     /* top: 100px; */
     /* left: 0; */
-    right: 0;
+    /* right: 0; */
     /* background-color: rgba(23,233,217); */
-    background-color: rgba(23,233,217, 1);
+    /* background-color: rgba(23,233,217, 1);
     overflow-x: hidden;
-    transition: 0.5s;
-}
+    transition: 0.5s; */
+/* }
 
 .overlay-content {
     position: relative;
@@ -186,47 +231,47 @@ a:hover {
     width: 100%;
     text-align: center;
     margin-top: 30px;
-}
+} */
 
-.overlay a {
+/* .overlay a {
     padding: 8px;
     text-decoration: none;
-    font-size: 36px;
+    font-size: 36px; */
     /* color: #818181; */
     /* color: #FF7676; -- redish*/
     /* color: #F54EA2; */
-    color: #ED2FD4;
+    /* color: #ED2FD4;
     display: block;
     transition: 0.3s;
     text-transform: uppercase;
-}
+} */
 
-.overlay a:hover, .overlay a:focus {
+/* .overlay a:hover, .overlay a:focus { */
     /* color: #f1f1f1; */
-    color: #FF7676;
+    /* color: #FF7676; */
     /* font-size: 40px; */
     /* transform: rotate(360deg); */
     /* transform: translateX(20px); */
 
-}
-
+/* } */
+/*
 .overlay .closebtn {
-    position: absolute;
+    position: absolute; */
     /* top: 20px; */
-    right: 15px;
-    font-size: 60px;
-}
+    /* right: 15px;
+    font-size: 60px; */
+/* } */
 
-@media screen and (max-height: 450px) {
+/* @media screen and (max-height: 450px) {
   .overlay a {font-size: 20px}
   .overlay .closebtn {
     font-size: 40px;
     top: 15px;
     right: 35px;
   }
-}
+} */
 
-.btn-register {
+/* .btn-register {
   background-color: #FF7676;
   padding: 12px;
 }
@@ -251,18 +296,18 @@ a:hover {
 
 .bar1, .bar2, .bar3 {
   background-color: white;
-}
-
+} */
+/*
 .bar1, .bar3 {
   width: 30px;
-  height: 3px;
+  height: 3px; */
   /* background-color: #333; */
-  margin: 6px 0;
-}
-
+  /* margin: 6px 0;
+} */
+/*
 .bar2 {
   width: 20px;
-  height: 3px;
+  height: 3px; */
   /* background-color: #333; */
-  margin: 6px 0;
-}
+  /* margin: 6px 0;
+} */
