--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,3 @@
-/*
-* --Colors--
-* - blue: rgba(23,233,217,1)
-*
-*
-*
-*
-*
-v
-*/
-
 @font-face {
   font-family: "Bebas";
   src: url("BEBAS.ttf") format('truetype');
@@ -20,7 +9,7 @@ v
 }
 
 body {
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: 'Bebas', sans-serif;
   margin: 0;
   padding: 0;
   font-size: 1rem;
@@ -29,7 +18,8 @@ body {
 }
 
 a:hover {
-  color: #FF7676;
+  /* color: #FF7676; */
+  color: #C53364;
   text-decoration: none;
 }
 
@@ -47,156 +37,13 @@ a:hover {
   height: 200px;
 }
 
-/* DELETE */
-/* .nav-background {
-  background-color: black;
-  transition: .5s;
-}
-
-.navbar-toggler {
-  border: none;
-}
-
- @media screen and (max-width: 991px) {
-  .navbar-collapse {
-    background-color: #000;
-    padding-left: 20px;
-  }
-} */
-
-/* .no-list-type {
-  list-style: none;
-}
-
-.schedule {
-  color: white;
-  margin-top: 100px;
-}
-*/
-
 .debug {
   border: 1px solid white;
 }
 
-.register-threeD {
-  margin-top: 1rem;
-  font-size: 30px;
-  letter-spacing: .2em;
-  text-transform: uppercase;
-  color: #FF7676;
-  transition: .4s;
-  text-align: center;
-  text-shadow:
-    1px .5px 0 #7F3B3B,
-    1px 1px 0 #7F3B3B,
-    1px 1.5px 0 #7F3B3B,
-    1px 2px 0 #7F3B3B,
-    1px 2.5px 0 #7F3B3B,
-    1px 3px 0 #7F3B3B,
-    1px 3.5px 0 #7F3B3B,
-    1px 4px 0 #7F3B3B,
-    6px 7px 15px black;
-}
-
-.register-threeD:hover {
-  transform: scale(1.1);
-  text-shadow:
-    1px -.5px 0 #13627F,
-    1px -1px 0 #13627F,
-    1px -1.5px 0 #13627F,
-    1px -2px 0 #13627F,
-    1px -2.5px 0 #13627F,
-    1px -3px 0 #13627F,
-    1px -3.5px 0 #13627F,
-    1px -4px 0 #13627F,
-    6px -7px 15px black;
-}
-
-
-/* .container-lg {
-  max-width: 960px;
-  margin: 0 auto;
-}
-
-.container-md {
-  max-width: 720px;
-  margin: 0 auto;
-}
-
-.container-sm {
-  max-width: 480px;
-  margin: 0 auto;
-}
-
-
-.v-header {
-  height: 100vh;
-  display: flex;
-  color: #fff;
-  /* overflow: hidden; */
-/* }
-
-.v-container {
-  max-width: 960px;
-  padding: 0 1rem;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.fullscreen-video-wrap {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-
-.fullscreen-video-wrap video {
-  min-width: 100%;
-  min-height: 100%;
-} */
-
-/* .header-content {
-  z-index: 2;
-  width: 100%;
-  align-self: center;
-}
-
-.header-content a {
-  text-decoration: none;
-  color: white;
-}
-
-
-.homepage-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-} */
-
-/* .coming-soon {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.coming-soon {
-  color: white;
-} */
-
 .promo-video {
-  /* width: 560px;
-  height: 315px; */
   width: 800px;
   height: 450px;
-  /* object-fit: fill; */
 }
 
 .txt-white {
@@ -208,124 +55,3 @@ a:hover {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
-/* @media screen and (max-width: 800px) {
-  .promo-video {
-    width: 100%;
-    /* height: auto; */
-  /* } */
-  /* .homepage-container {
-    align-items: center;
-    justify-content: flex-start;
-  }
-  .r-button {
-    display: none;
-  } */
-/* } */
-
-
-
-
-/*
-
-.overlay {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    /* top: 100px; */
-    /* left: 0; */
-    /* right: 0; */
-    /* background-color: rgba(23,233,217); */
-    /* background-color: rgba(23,233,217, 1);
-    overflow-x: hidden;
-    transition: 0.5s; */
-/* }
-
-.overlay-content {
-    position: relative;
-    top: 10%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
-} */
-
-/* .overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px; */
-    /* color: #818181; */
-    /* color: #FF7676; -- redish*/
-    /* color: #F54EA2; */
-    /* color: #ED2FD4;
-    display: block;
-    transition: 0.3s;
-    text-transform: uppercase;
-} */
-
-/* .overlay a:hover, .overlay a:focus { */
-    /* color: #f1f1f1; */
-    /* color: #FF7676; */
-    /* font-size: 40px; */
-    /* transform: rotate(360deg); */
-    /* transform: translateX(20px); */
-
-/* } */
-/*
-.overlay .closebtn {
-    position: absolute; */
-    /* top: 20px; */
-    /* right: 15px;
-    font-size: 60px; */
-/* } */
-
-/* @media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
-} */
-
-/* .btn-register {
-  background-color: #FF7676;
-  padding: 12px;
-}
-
-.r-button {
-  padding-top: 20px;
-}
-
-.r-button a {
-  color: white;
-}
-
-.register-nav {
-  color: white;
-  margin-right: 15px;
-}
-
-.menu-container {
-  display: inline-block;
-  cursor: pointer;
-}
-
-.bar1, .bar2, .bar3 {
-  background-color: white;
-} */
-/*
-.bar1, .bar3 {
-  width: 30px;
-  height: 3px; */
-  /* background-color: #333; */
-  /* margin: 6px 0;
-} */
-/*
-.bar2 {
-  width: 20px;
-  height: 3px; */
-  /* background-color: #333; */
-  /* margin: 6px 0;
-} */
