--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,4 @@
+/*
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -620,3 +621,5 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+*/
