--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,12 @@ body {
   background-color: #f2f4f4;
 }
 
+@media screen and (max-width: 700px) {
+  .promo-video {
+      width: 100%;
+  }
+}
+
 /*
 html {
   font-family: sans-serif;
